[package]
name = "sui-indexer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sui-indexer"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
diesel = {workspace = true}
diesel-async = {workspace =true}
diesel-derive-enum = {workspace=true}

futures = {workspace=true}
serde = { workspace=true}
serde_json = {workspace =true}
anyhow = {workspace=true}
lapin = {workspace=true}
sui-sdk = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
chrono = {workspace=true}
redis = {workspace=true} 

structopt = "0.3.26"
flume = "0.10.14"
dotenv = "0.15.0"

